# granola-cli

./: .gitignore  Cargo.toml  README.md  RELEASING.md
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
plugins/granola/: README.md
plugins/granola/.claude-plugin/: plugin.json
plugins/granola/skills/granola-export/: SKILL.md
plugins/granola/skills/granola-notes/: SKILL.md
plugins/granola/skills/granola-recent/: SKILL.md
plugins/granola/skills/granola-search/: SKILL.md
src/: api.rs  auth.rs  main.rs  output.rs  prosemirror.rs
