[package]
name = "granola-cli"
version = "0.1.2"
edition = "2021"
rust-version = "1.74"
description = "Unofficial CLI for Granola meeting notes (with credential-storage fix for Granola desktop ≥7.162)"
authors = ["Travers McInerney"]
license = "MIT"
repository = "https://github.com/tmcinerney/granola-cli"
homepage = "https://github.com/tmcinerney/granola-cli"
readme = "README.md"
keywords = ["granola", "cli", "meetings", "transcripts"]
categories = ["command-line-utilities"]

[[bin]]
name = "granola"
path = "src/main.rs"

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
cbc = { version = "0.1", features = ["alloc"] }
ureq = { version = "2.10", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
directories = "6"
fd-lock = "4"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
comfy-table = "7"
pbkdf2 = "0.12"
sha1 = "0.10"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
